@@ -1,5 +1,11 @@
 2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/filetree.cc (regexxer_create_file_tree): Move to anonymous
+	namespace.  Not that it matters much, but I like it this way.
+	* src/statusline.cc (regexxer_create_status_line): ditto.
+
+2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/filetree.cc (FileTree::FileTree): Remove superfluous
 	namespace qualification.
 
